--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,21 @@
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
+{% if page.url != "/" %}
+<header>
+    <h2><a href="/">home</a></h2>
+</header>
+{% endif %}
 <body>
-  <header>
-    <h1>{{ site.title }}</h1>
-  </header>
   <main>
     {{ content }}
   </main>
 </body>
 </html>
+<nav>
+  <ul>
+    {% for link in site.nav_links %}
+      <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+    {% endfor %}
+  </ul>
+</nav>
