--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
 <nav>
   <ul>
     {% for link in site.nav_links %}
-      <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+      <li><a href="{{ link.url | relative_url }}">{{ link.title }}</a></li>
     {% endfor %}
   </ul>
 </nav>
+
